Code cleanup and rearrange along with general bug fixes